tests/baselines/reference/classWithTwoConstructorDefinitions.errors.txt
classWithTwoConstructorDefinitions.ts(2,5): error TS2392: Multiple constructor implementations are not allowed.
classWithTwoConstructorDefinitions.ts(3,5): error TS2392: Multiple constructor implementations are not allowed.
classWithTwoConstructorDefinitions.ts(7,5): error TS2392: Multiple constructor implementations are not allowed.
classWithTwoConstructorDefinitions.ts(8,5): error TS2392: Multiple constructor implementations are not allowed.


==== classWithTwoConstructorDefinitions.ts (4 errors) ====
    class C {
        constructor() { } // error
        ~~~~~~~~~~~
!!! error TS2392: Multiple constructor implementations are not allowed.
        constructor(x) { } // error
        ~~~~~~~~~~~
!!! error TS2392: Multiple constructor implementations are not allowed.
    }
    
    class D<T> {
        constructor(x: T) { } // error
        ~~~~~~~~~~~
!!! error TS2392: Multiple constructor implementations are not allowed.
        constructor(x: T, y: T) { } // error
        ~~~~~~~~~~~
!!! error TS2392: Multiple constructor implementations are not allowed.
    }